--- a/ProjetoRepositorio.dproj
+++ b/ProjetoRepositorio.dproj
@@ -88,6 +88,7 @@
         </DCCReference>
         <DCCReference Include="URepositoy.pas"/>
         <DCCReference Include="UORM.pas"/>
+        <DCCReference Include="Models.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
